crates/slopty-proto/tests/snapshots/golden__golden__client_term_paste.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
18 00 00 00 01 10 01 02 03 04 05 06 07 08 09 0a
0b 0c 0d 0e 0f 10 07 03 6c 73 0a 00
