crates/slopty-proto/tests/snapshots/golden__golden__client_term_paste_picture_control.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
1f 00 00 00 01 10 01 02 03 04 05 06 07 08 09 0a
0b 0c 0d 0e 0f 10 0f 01 08 00 29 04 00 00 01 01
76 00 00
