crates/slopty-proto/tests/snapshots/golden__golden__client_watch_folders.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
13 00 00 00 11 02 0d 2f 77 2f 73 6c 6f 70 74 79
2f 73 72 63 02 7e 2f
