crates/slopty-proto/tests/snapshots/golden__golden__client_write_file.snap
---
source: crates/slopty-proto/tests/golden.rs
assertion_line: 43
expression: hex(&bytes)
---
24 00 00 00 09 12 2f 77 2f 73 6c 6f 70 74 79 2f
6e 6f 74 65 73 2e 6d 64 08 23 20 4e 6f 74 65 73
0a 01 80 d0 95 ff bc 31
