crates/slopty-proto/tests/snapshots/golden__golden__client_xfer_begin.snap
---
source: crates/slopty-proto/tests/golden.rs
assertion_line: 43
expression: hex(&bytes)
---
29 00 00 00 0c 00 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 09 01 00 10 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 01 02 80 20
