crates/slopty-proto/tests/snapshots/golden__golden__client_xfer_begin_attachment.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
18 00 00 00 0d 00 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 09 01 03 01 80 10
