crates/slopty-proto/tests/snapshots/golden__golden__client_xfer_fetch_resumed.snap
---
source: crates/slopty-proto/tests/golden.rs
assertion_line: 43
expression: hex(&bytes)
---
3b 00 00 00 0c 08 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 09 0d 7e 2f 70 72 6f 6a 65 63
74 2f 6f 75 74 01 0b 6f 75 74 2f 62 69 67 2e 62
69 6e 80 80 40 80 80 c0 01 80 d8 c1 a2 8c 34
