crates/slopty-proto/tests/snapshots/golden__golden__frame_prefix_region.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(zoomed.as_bytes())
---
b0 04 00 00 04 03 02 01 00 00 00 00 00 00 00 00
03 05 00 00 90 06 32 02 dc 06 dc 03
